--- a/ClientBook/CadastroEstabelec.xaml
+++ b/ClientBook/CadastroEstabelec.xaml
@@ -1,5 +1,5 @@
 ﻿<phone:PhoneApplicationPage
-    x:Class="ClientBook.CadastroClassif"
+    x:Class="ClientBook.CadastroEstabelec"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
@@ -26,17 +26,23 @@
         <!--TitlePanel contains the name of the application and page title-->
         <StackPanel Grid.Row="0" Margin="12,17,0,28">
             <TextBlock Text="" Style="{StaticResource PhoneTextNormalStyle}"/>
-            <TextBlock Text="Classificação" TextAlignment="Center" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}"/>
+            <TextBlock Text="Estabelecimento" FontSize="60" TextAlignment="Center" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}"/>
         </StackPanel>
 
         <!--ContentPanel - place additional content here-->
         <StackPanel Grid.Row="1">
 
-            <TextBlock Text="Nome Categoria"/>
-            <TextBox Name="TxtClassif" InputScope="Text" MaxLength="20"/>
+            <TextBlock Text="Nome Estabelecimento"/>
+            <TextBox Name="TxtEstabelec" InputScope="Text" MaxLength="15"/>
+
+            <TextBlock Text="Endereço"/>
+            <TextBox Name="TxtEndereco" InputScope="Text" MaxLength="20"/>
+
+            <TextBlock Text="Telefone"/>
+            <TextBox Name="TxtTelefone" InputScope="Number" MaxLength="20"/>
 
             <Button Content="Salvar" Name="btnSubmite" Grid.Row="8" Height="72" Width="160" HorizontalAlignment="Left" VerticalAlignment="Top"
-                    Margin="157,56,0,0" Click="btnClassif_Click"/>
+                    Margin="157,56,0,0" Click="btnEstabelec_Click"/>
 
 
 
