--- a/ClientBook/CadastroProd.xaml
+++ b/ClientBook/CadastroProd.xaml
@@ -1,5 +1,5 @@
 ﻿<phone:PhoneApplicationPage
-    x:Class="ClientBook.CadastroClassif"
+    x:Class="ClientBook.CadastroProd"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
@@ -26,17 +26,20 @@
         <!--TitlePanel contains the name of the application and page title-->
         <StackPanel Grid.Row="0" Margin="12,17,0,28">
             <TextBlock Text="" Style="{StaticResource PhoneTextNormalStyle}"/>
-            <TextBlock Text="Classificação" TextAlignment="Center" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}"/>
+            <TextBlock Text="Produto" FontSize="60" TextAlignment="Center" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}"/>
         </StackPanel>
 
         <!--ContentPanel - place additional content here-->
         <StackPanel Grid.Row="1">
 
-            <TextBlock Text="Nome Categoria"/>
-            <TextBox Name="TxtClassif" InputScope="Text" MaxLength="20"/>
+            <TextBlock Text="Nome Produto"/>
+            <TextBox Name="TxtNomeProd" InputScope="Text" MaxLength="32"/>
+
+            <TextBlock Text="Marca"/>
+            <TextBox Name="TxtMarca" InputScope="Text" MaxLength="32"/>
 
             <Button Content="Salvar" Name="btnSubmite" Grid.Row="8" Height="72" Width="160" HorizontalAlignment="Left" VerticalAlignment="Top"
-                    Margin="157,56,0,0" Click="btnClassif_Click"/>
+                    Margin="157,56,0,0" Click="btnProd_Click"/>
 
 
 
