--- a/ClientBook/Compra.xaml
+++ b/ClientBook/Compra.xaml
@@ -30,9 +30,10 @@
         <!--ContentPanel - place additional content here-->
         <Grid x:Name="ContentPanel" Grid.Row="1" Margin="10,0,14,0">
 
-            
+
 
             <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
@@ -58,30 +59,70 @@
             </Grid.ColumnDefinitions>
 
 
-            <TextBlock Text="Estabelecimento" />
+            <TextBlock Text="Estabelecimento" Grid.Row="0" />
+
+            <toolkit:ListPicker x:Name="lpkEstabelecimento" 
+                                Grid.Column="0" Grid.Row="1" Width="315" HorizontalAlignment="Left"
+                                FullModeItemTemplate="{Binding lpkFullItemTemplate}"
+                                ItemTemplate="{Binding lpkItemTemplate}" Margin="12,12,0,12" Grid.ColumnSpan="2" />
 
 
-            <TextBox Name="txtName" InputScope="Text" Grid.Row="1" Grid.ColumnSpan="3" />
+            <Button Content="+" Name="btnEstabelec" Grid.Row="1" HorizontalAlignment="Left"
+                     Click="btnAdd_Estabelec_Click" Width="76" Height="76" Margin="10,8,0,0" Grid.Column="1"/>
+
+            <Button Content="-" Name="btnExcluirEstabelec" Grid.Row="1" Grid.Column="1" Width="76" Height="76"
+                     Click="btnExcluir_Estabelec_Click" Margin="75,8,11,0" Grid.ColumnSpan="2"/>
+
+
+
+
+
+            <!--<TextBox Name="txtName" InputScope="Text" MaxLength="15" Grid.Row="1" Grid.ColumnSpan="3" />-->
 
             <TextBlock Text="Produto" Grid.Row="2"/>
-            <TextBox Name="txtAges" InputScope="Text" Grid.Row="3" Grid.ColumnSpan="3"/>
+            <!--<TextBox Name="txtProduto" InputScope="Text" MaxLength="20" Grid.Row="3" Grid.ColumnSpan="3"/>-->
+
+
+            <toolkit:ListPicker x:Name="lpkProduto" 
+                                Grid.Column="0" Grid.Row="3" Width="315" HorizontalAlignment="Left"
+                                FullModeItemTemplate="{Binding lpkFullItemTemplate}"
+                                ItemTemplate="{Binding lpkItemTemplate}" Margin="12,12,0,12" Grid.ColumnSpan="2" />
+
+
+            <Button Content="+" Name="btnProd" Grid.Row="3" HorizontalAlignment="Left"
+                     Click="btnAdd_Prod_Click" Width="76" Height="76" Margin="10,8,0,0" Grid.Column="1"/>
+
+            <Button Content="-" Name="btnExcluirProd" Grid.Row="3" Grid.Column="1" Width="76" Height="76"
+                     Click="btnExcluir_Prod_Click" Margin="75,8,11,0" Grid.ColumnSpan="2"/>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
             <TextBlock Text="Classificação" Grid.Row="4"/>
-            
+
             <!--ADICIONAR TOOLKIT-->
             <toolkit:ListPicker x:Name="lpkCountry" SelectionChanged="lpkCountry_SelectionChanged"
                                 Grid.Row="5" Grid.Column="0" Width="315" HorizontalAlignment="Left"
                                 FullModeItemTemplate="{Binding lpkFullItemTemplate}" 
                                 ItemTemplate="{Binding lpkItemTemplate}" Margin="12,12,0,12" Grid.ColumnSpan="2" />
-
-
-
-
-
-
-
-
 
 
 
@@ -95,14 +136,26 @@
 
 
 
-            <TextBlock Text="Preço" Grid.Row="6" Margin="0,0,0,9.5"/>
-            <TextBlock Text="R$" FontSize="45" Grid.Row="6" Grid.Column="0" Margin="0,49,0,27" Grid.RowSpan="2"/>
-            <TextBox Name="txtPreco" Width="250" HorizontalAlignment="Left"
-                     InputScope="Number" Grid.Row="6" Margin="45,39,0,46" 
-                     Grid.RowSpan="2"  SelectionForeground="Black" SelectionBackground="Black" CaretBrush="Black" />
+            <!--<TextBlock Text="Quantidade" Grid.Row="6" Margin="0,0,0,9.5"/>-->
+            <TextBlock Text="Quantidade" Grid.Row="6"/>
 
-            <Button Content="Salvar" Name="btnSubmite" Grid.Row="8" Height="72" Width="160" HorizontalAlignment="Left" VerticalAlignment="Top"
-                    Margin="157,56,0,0" Click="btnSubmit_Click"/>
+            <TextBox Name="txtQtd" InputScope="Number" MaxLength="4" Grid.Row="7" Margin="0,0,132,0"/>
+
+
+            <!--<TextBox Name="txtQtd" Width="250" HorizontalAlignment="Left"
+                     InputScope="Number" Grid.Row="7" Margin="45,0,0,100" 
+                     Grid.RowSpan="2"  SelectionForeground="Black" SelectionBackground="Black" CaretBrush="Black" />-->
+
+
+
+            <TextBlock Text="Preço" Grid.Row="8" />
+
+
+            <TextBox Name="txtPreco" Width="185" HorizontalAlignment="Left" MaxLength="10"
+                     InputScope="Number" Grid.Row="9"  SelectionForeground="Black" SelectionBackground="Black" CaretBrush="Black" />
+
+            <Button Content="Salvar" Name="btnSubmite" Grid.Row="10" Height="72" Width="160" HorizontalAlignment="Left" VerticalAlignment="Top"
+                    Margin="157,15,0,0" Click="btnSubmit_Click"/>
 
 
 
