--- a/ClientBook/Compra.xaml
+++ b/ClientBook/Compra.xaml
@@ -70,10 +70,12 @@
             <Button Content="+" Name="btnEstabelec" Grid.Row="1" HorizontalAlignment="Left"
                      Click="btnAdd_Estabelec_Click" Width="76" Height="76" Margin="10,8,0,0" Grid.Column="1"/>
 
-            <Button Content="-" Name="btnExcluirEstabelec" Grid.Row="1" Grid.Column="1" Width="76" Height="76"
-                     Click="btnExcluir_Estabelec_Click" Margin="75,8,11,0" Grid.ColumnSpan="2"/>
-
-
+            <Button Content="-" Name="btnAcessEstabelec" Grid.Row="1" Grid.Column="1" Width="76" Height="76"
+                     Click="btnAcess_Estabelec_Click" Margin="75,8,11,0" Grid.ColumnSpan="2">
+                <Button.Background>
+                    <ImageBrush Stretch="Uniform" ImageSource="/Icons/eyeCopia.png"/>
+                </Button.Background>
+            </Button>
 
 
 
@@ -92,26 +94,12 @@
             <Button Content="+" Name="btnProd" Grid.Row="3" HorizontalAlignment="Left"
                      Click="btnAdd_Prod_Click" Width="76" Height="76" Margin="10,8,0,0" Grid.Column="1"/>
 
-            <Button Content="-" Name="btnExcluirProd" Grid.Row="3" Grid.Column="1" Width="76" Height="76"
-                     Click="btnExcluir_Prod_Click" Margin="75,8,11,0" Grid.ColumnSpan="2"/>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+            <Button Content="-" Name="btnAcessProd" Grid.Row="3" Grid.Column="1" Width="76" Height="76"
+                     Click="btnAcess_Prod_Click" Margin="75,8,11,0" Grid.ColumnSpan="2">
+                <Button.Background>
+                    <ImageBrush Stretch="Uniform" ImageSource="/Icons/eyeCopia.png"/>
+                </Button.Background>
+            </Button>
 
 
 
@@ -119,10 +107,10 @@
             <TextBlock Text="Classificação" Grid.Row="4"/>
 
             <!--ADICIONAR TOOLKIT-->
-            <toolkit:ListPicker x:Name="lpkCountry" SelectionChanged="lpkCountry_SelectionChanged"
-                                Grid.Row="5" Grid.Column="0" Width="315" HorizontalAlignment="Left"
+            <toolkit:ListPicker x:Name="lpkClassific" SelectionChanged="lpkClassific_SelectionChanged"
+                                Grid.Row="5" Grid.Column="0"
                                 FullModeItemTemplate="{Binding lpkFullItemTemplate}" 
-                                ItemTemplate="{Binding lpkItemTemplate}" Margin="12,12,0,12" Grid.ColumnSpan="2" />
+                                ItemTemplate="{Binding lpkItemTemplate}" Margin="12,12,114,12" Grid.ColumnSpan="2" />
 
 
 
@@ -130,10 +118,12 @@
             <Button Content="+" Name="btnCadastro" Grid.Row="5" HorizontalAlignment="Left"
                      Click="btnClassificar_Click" Width="76" Height="76" Margin="10,8,0,0" Grid.Column="1"/>
 
-            <Button Content="-" Name="btnExcluir" Grid.Row="5" Grid.Column="1" Width="76" Height="76"
-                     Click="btnExcluir_Click" Margin="75,8,11,0" Grid.ColumnSpan="2"/>
-
-
+            <Button Content="-" Name="btnacessClassific" Grid.Row="5" Grid.Column="1" Width="76" Height="76"
+                     Click="btnAcess_Classific_Click" Margin="75,8,11,0" Grid.ColumnSpan="2">
+                <Button.Background>
+                    <ImageBrush Stretch="Uniform" ImageSource="/Icons/eyeCopia.png"/>
+                </Button.Background>
+            </Button>
 
 
             <!--<TextBlock Text="Quantidade" Grid.Row="6" Margin="0,0,0,9.5"/>-->
