--- a/ClientBook/CadastroEstabelec.xaml
+++ b/ClientBook/CadastroEstabelec.xaml
@@ -26,11 +26,14 @@
         <!--TitlePanel contains the name of the application and page title-->
         <StackPanel Grid.Row="0" Margin="12,17,0,28">
             <TextBlock Text="" Style="{StaticResource PhoneTextNormalStyle}"/>
-            <TextBlock Text="Estabelecimento" FontSize="60" TextAlignment="Center" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}"/>
+            <TextBlock Text="Estabelecimento" Name="TxtTitulo" FontSize="60" TextAlignment="Center" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}"/>
         </StackPanel>
 
         <!--ContentPanel - place additional content here-->
         <StackPanel Grid.Row="1">
+
+            <TextBlock Text="Id" Visibility="Collapsed"/>
+            <TextBox Name="TxtId" Visibility="Collapsed" Text="0"/>
 
             <TextBlock Text="Nome Estabelecimento"/>
             <TextBox Name="TxtEstabelec" InputScope="Text" MaxLength="15"/>
